✨ feat: 어드민 전용 DB 조회 라우트 show_database 추가
- admin_dashboard.html에서 admin_database.html로 이동하는 버튼 추가
- /show_database 라우트를 통해 DB 내용 확인 가능 (관리자만 접근)
- 사용자 테이블 등 현재 저장된 데이터 시각화
- 비어 있는 경우 안내 메시지 표시

--- a/vibeapp/admin/templates/admin_dashboard.html
+++ b/vibeapp/admin/templates/admin_dashboard.html
@@ -9,7 +9,7 @@
         <div class="card-body">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
-                    <a href="#">📋 사용자 목록 보기</a>
+                    <a href="{{ url_for('admin.show_database') }}">📋 사용자 데이터 베이스 보기</a>
                 </li>
                 <li class="list-group-item">
                     <a href="#">🚨 신고 내역 확인</a>
