✨ feat: DB에 UTC로 저장된 시간을 조회 시 KST로 변환 처리
- expires_at 필드를 UTC 기준으로 DB에 저장
- 사용자에게 보여줄 때는 KST(Asia/Seoul) 기준으로 변환하여 출력
- 시간대 혼동 방지를 위한 명시적 타임존 처리

--- a/vibeapp/admin/templates/admin_database.html
+++ b/vibeapp/admin/templates/admin_database.html
@@ -11,6 +11,7 @@
                     <th>ID</th>
                     <th>Spotify ID</th>
                     <th>이름</th>
+                    <th>토큰 만료 시간</th>
                 </tr>
             </thead>
             <tbody>
@@ -19,6 +20,7 @@
                         <td>{{ user.id }}</td>
                         <td>{{ user.spotify_id }}</td>
                         <td>{{ user.display_name or "이름 없음" }}</td>
+                        <td>{{ user.token_expire_at|kst if user.token_expire_at else "없음" }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
