🐛 fix: 관계 참조 오류 및 사용자 정보 동기화 문제 수정
- relationship 경로 인식 오류 해결을 위해 vibeapp/models/__init__.py 추가
- 세션에서 display_name을 직접 사용하는 방식 제거
- 사용자 이름은 항상 DB에서 조회하여 최신 상태 유지
- 세션에는 최소한의 정보(user_id, platform 등)만 저장되도록 구조 개선

--- a/vibeapp/admin/templates/admin_database.html
+++ b/vibeapp/admin/templates/admin_database.html
@@ -20,7 +20,7 @@
                         <td>{{ user.id }}</td>
                         <td>{{ user.spotify_id }}</td>
                         <td>{{ user.display_name or "이름 없음" }}</td>
-                        <td>{{ user.token_expire_at|kst if user.token_expire_at else "없음" }}</td>
+                        <td>{{ user.expire_at|kst if user.expire_at else "없음" }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
