♻️ refactor: JS/CSS 파일 구조 개선 및 모듈 분리
- 기능별 JavaScript 파일 분리:
  * api.js - API 헬퍼 및 유틸리티
  * search.js - 검색 기능 전용
  * friends.js - 친구 관리 시스템
  * social.js - 소셜 페이지 UI 관리
  * profile.js - 프로필 페이지 전용

- 기능별 CSS 파일 분리:
  * base.css - 기본 스타일 및 공통 컴포넌트
  * search.css - 검색 기능 스타일
  * social.css - 소셜 기능 스타일
  * responsive.css - 반응형 디자인

- 인라인 스타일/스크립트 제거
- 페이지별 조건부 파일 로딩 최적화

--- a/vibeapp/templates/public/home.html
+++ b/vibeapp/templates/public/home.html
@@ -39,7 +39,7 @@
                             </div>
                             <h5 class="card-title">소셜</h5>
                             <p class="card-text text-muted">친구들과 연결하고 음악 취향을 공유해보세요</p>
-                            <a href="{{ url_for('friend.social') }}" class="btn btn-success">소셜 허브</a>
+                            <a href="{{ url_for('social.main') }}" class="btn btn-success">소셜 허브</a>
                         </div>
                     </div>
                 </div>
