♻️ refactor: JavaScript 공통 모듈 생성 및 API 통합
- core/api.js: 모든 API 호출 중앙화
- core/utils.js: 중복 유틸리티 함수 통합
- modules/notifications.js: 통합 알림 시스템 구현
- layout.html: 스크립트 로딩 순서 최적화

--- a/vibeapp/templates/layout.html
+++ b/vibeapp/templates/layout.html
@@ -107,7 +107,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core JavaScript Files -->
         {% if session.user %}
-            <script src="{{ url_for('static', filename='js/api.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/core/api.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/core/utils.js' )}}"></script>
+            <script src="{{ url_for('static', filename='js/modules/notifications.js')}}"></script>
             <script src="{{ url_for('static', filename='js/search.js') }}"></script>
             <!-- 페이지별 JavaScript -->
             {% if request.endpoint == 'social.main' %}
