🐛fix: 소셜허브/친구 관리에서 친구 검색이 안되던 버그 수정
- 각 함수의 파라미터의 참조가 잘못되어있던 오류 수정

--- a/vibeapp/templates/layout.html
+++ b/vibeapp/templates/layout.html
@@ -110,13 +110,12 @@
             <script src="{{ url_for('static', filename='js/core/api.js') }}"></script>
             <script src="{{ url_for('static', filename='js/core/utils.js' )}}"></script>
             <script src="{{ url_for('static', filename='js/modules/notifications.js')}}"></script>
+            <script src="{{ url_for('static', filename='js/modules/friends.js')}}"></script>
             <script src="{{ url_for('static', filename='js/search.js') }}"></script>
             <!-- 페이지별 JavaScript -->
             {% if request.endpoint == 'social.main' %}
-                <script src="{{ url_for('static', filename='js/friends.js') }}"></script>
                 <script src="{{ url_for('static', filename='js/social.js') }}"></script>
             {% elif request.endpoint == 'social.user_profile' %}
-                <script src="{{ url_for('static', filename='js/friends.js') }}"></script>
                 <script src="{{ url_for('static', filename='js/profile.js') }}"></script>
             {% endif %}
         {% endif %}
