♻️ refactor: 모듈을 활용해 profile.js를 리팩터링
- NotificationManager, FriendManager 모듈을 활용해 중복을 제거하고 코드를 간결하게 만듦

--- a/vibeapp/templates/layout.html
+++ b/vibeapp/templates/layout.html
@@ -111,7 +111,7 @@
             <script src="{{ url_for('static', filename='js/core/utils.js' )}}"></script>
             <script src="{{ url_for('static', filename='js/modules/notifications.js')}}"></script>
             <script src="{{ url_for('static', filename='js/modules/friends.js')}}"></script>
-            <script src="{{ url_for('static', filename='js/search.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/modules/search.js') }}"></script>
             <!-- 페이지별 JavaScript -->
             {% if request.endpoint == 'social.main' %}
                 <script src="{{ url_for('static', filename='js/social.js') }}"></script>
