♻️ refactor: 모듈을 사용하도록 리팩토링 및 파일 이동
- social.js와 profile.js가 CrossVibeAPI, NotificationManager, FriendManager 등의 공통 모듈을 사용하도록 리팩토링하여 코드 중복을 제거하고 간결성을 높였음.
- 관심사 분리 원칙을 지키기 위해 social.js와 profile.js는 각각의 페이지에만 집중하도록 함

- 파일 이동에 따라 `layout.html`에서 해당 JavaScript 파일을 불러오는 경로를 수정했습니다.

--- a/vibeapp/templates/layout.html
+++ b/vibeapp/templates/layout.html
@@ -114,9 +114,9 @@
             <script src="{{ url_for('static', filename='js/modules/search.js') }}"></script>
             <!-- 페이지별 JavaScript -->
             {% if request.endpoint == 'social.main' %}
-                <script src="{{ url_for('static', filename='js/social.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/pages/social.js') }}"></script>
             {% elif request.endpoint == 'social.user_profile' %}
-                <script src="{{ url_for('static', filename='js/profile.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/pages/profile.js') }}"></script>
             {% endif %}
         {% endif %}
     </body>
